Atualizando sdk S3 para pegar a região do bucket Backup/Restore só podem ser feitos em buckets que estiverem na mesma região do banco